# Precursor

./: CMakeLists.txt  README.md
cpp/: Constants.cpp  Constants.h  Main.cpp  ViewModel.cpp  ViewModel.h
cpp/dataObjects/: EntityPath.cpp  EntityPath.h  Node.cpp  Node.h  Path.cpp  Path.h  PropertyNamePath.cpp  PropertyNamePath.h  PropertyValuePath.cpp  PropertyValuePath.h  Shape.cpp  Shape.h  Size.cpp  Size.h
cpp/models/: AddMenuModel.cpp  AddMenuModel.h  NodesModel.cpp  NodesModel.h
cpp/views/: NodeShape.cpp  NodeShape.h
qml/: Main.qml
qml/Scene/: Scene.qml
qml/Scene/Node/: Node.qml
